[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/inimigos/tiro_nave.gd" type="Script" id=1]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/1.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/3.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/14.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/4.png" type="Texture" id=5]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/5.png" type="Texture" id=6]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/9.png" type="Texture" id=7]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/6.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/12.png" type="Texture" id=9]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/16.png" type="Texture" id=10]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/19.png" type="Texture" id=11]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/8.png" type="Texture" id=12]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/7.png" type="Texture" id=13]
[ext_resource path="res://sprites/inimigos/80s/nave/tiro_nave/2.png" type="Texture" id=14]
[ext_resource path="res://sprites/efeitos_jogo/2DLight.png" type="Texture" id=15]
[ext_resource path="res://efeitos_luzes_neon/assets - Copia/light.png" type="Texture" id=16]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="CircleShape2D" id=1]
radius = 10.5161

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("luz_frontal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.964706, 0.329412, 0.0509804, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("luz_atras:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.101961, 0.101961, 0.392157 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "explodir"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("luz_frontal:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.964706, 0.329412, 0.0509804, 1 ), Color( 0.964706, 0.329412, 0.0509804, 0.215686 ), Color( 0.964706, 0.329412, 0.0509804, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("luz_atras:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.933333, 0.101961, 0.101961, 0.392157 ), Color( 0.933333, 0.101961, 0.101961, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "tiro"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ]
}

[node name="tiro_boss2" type="Area2D"]
collision_layer = 2
collision_mask = 65
script = ExtResource( 1 )

[node name="luz_frontal" type="Sprite" parent="."]
modulate = Color( 0.964706, 0.329412, 0.0509804, 1 )
material = SubResource( 4 )
position = Vector2( -1, 0.5 )
scale = Vector2( 0.0976562, 0.130859 )
texture = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 8 )

[node name="luz_atras" type="Sprite" parent="."]
modulate = Color( 0.933333, 0.101961, 0.101961, 0.392157 )
material = SubResource( 4 )
position = Vector2( -1.5, 0 )
scale = Vector2( 0.0449219, 0.0976562 )
texture = ExtResource( 15 )

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/explodir = SubResource( 2 )
anims/tiro = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 16 )
texture_scale = 0.4

[connection signal="body_entered" from="." to="." method="_on_tiro_boss1_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
